tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax03/Test.java


public class Test {
	interface A {
		static boolean equals(Object o) { return true; } 
	}
}